css/wireframe.css
/* ... */
TH, TD {
	padding: 0.5rem;
	position: relative;
	text-align: left;
}
TABLE.compact TH, TD {
	padding: 0.25rem;
}
TBODY TR:nth-child(odd)
{
	background-color: whitesmoke;
}
TH.ascending:after, TH.descending:after {
	content: "";
	border: 8px solid rgba(255, 255, 255, 0);
	display: inline-block;
	height: 0;
	margin-left: 0.25rem;
	position: absolute;
	width: 0;
}
TH.ascending:after {
	border-bottom: 8px solid white;
	top: 8px;
}
TH.descending:after {
	border-top: 8px solid white;
	top: 16px;
}
TABLE.compact TH.ascending:after { top: 0; }
TABLE.compact TH.descending:after { top: 8px; }

/* ------------------- WIDGETS ----------------------------- */
BUTTON, INPUT, SELECT {
	font-family: "Architects Daughter", sans-serif;
}
BUTTON, INPUT[type="button"], INPUT.button, A.button {
	font-size: 1.2rem;
}
INPUT, SELECT {
	font-size: 1rem;
}
FIELDSET {
	border: 2px groove;
	padding: 1rem;
}
LEGEND {
	padding: 0 0.25rem;
}
.buttons {
	text-align: center;
}
.wf-button {
	background-color: aliceblue;
	border: solid #555 2px;
	border-radius: 4px;
	cursor: pointer;
	display: inline-block;
	margin: 0.5rem 0 0 0;
	padding: 5px;
	position: relative;
	box-shadow: 2px 1px 5px #777
}
.wf-button.secondary, .wf-button.cancel {
	background-color: white;
	box-shadow: none;
}
.wf-button.disabled {
	background-color: #EDEDED;
}
.buttons.compact .wf-button {
	border-width: 1px;
	font-size: 0.71rem;
	margin: 0.25rem 0 0 0;
	padding: 3px;
}
UL.radio-list {
	list-style-image: none;
	list-style-type: none;
	margin: 0 0 1.5rem 0;
	padding-left: 0;
}
UL.radio-list LI {
	margin: 0.125rem 0;
}


/* ------------------- TEXT STYLES --------------------------- */
H1, H2, H3, H4, H5, H6 {
	letter-spacing: 1px; 
	margin: 2rem 0 0.5rem;
}
H1 { font-size: 2rem; font-weight: bold; margin:0.5rem 0 2rem;}
H2 { font-size: 1.75rem; font-weight: bold;}
H3 { font-size: 1.5rem; font-weight: bold; }
H4 { font-size: 1rem; font-weight: bold; }
H5 { font-size: 0.8rem; font-weight: bold; }
H6 { font-size: 0.75rem; }

A {
	color: mediumblue;
}
EM {
	font-style: italic;
}
LI {
	margin-bottom: 0.25rem;
}
PRE {
	font-family: 'Averia Gruesa Libre', monotype;
}
UL {
	list-style-image: url(bullet.png);
}
.compact {
	font-size: 0.88rem;
}
.currentStatus {
	border: 1px solid darkgrey;
	border-bottom: 0.25rem solid darkgrey;
	border-right: 0.25rem solid darkgrey;
	border-radius: 16px;
	display: inline-block;
	color: dimgrey;
	padding: 0.5rem;
}
.fieldHelp {
	display: inline-block;
	color: darkslategrey;
	font-size: 0.75rem;
	margin-left: 0.5rem;
}
.instructions {
	border-left: 5px solid lightsteelblue;
	padding-left: 0.5rem;
}
.note {
	font-family: 'Averia Gruesa Libre', monotype;
	background-color: dimgrey;
	border-radius: 3px;
	color: white;
	padding: 5px;
}
.note A{
	color: azure;
}
.required:after {
	color: tomato;
	content: ' *';
	font-size: 1.5rem;
}


/* ------------------ PANELS --------------------------------- */
.panel {
	border: 1px solid grey;
	border-radius: 5px;
	display: block;
	overflow: hidden;
	padding: 0;
}

.panel .panel-heading {
	background-color: whitesmoke;
	border-bottom: 1px solid grey;
	padding: 0.5rem;
	margin: 0;
}
.panel.drawn .panel-heading {
	border-bottom: 5px solid;
	border-image: url(box.png) 5 5 5 5 stretch;
}
.panel .panel-heading H1,
.panel .panel-heading H2,
.panel .panel-heading H3,
.panel .panel-heading H4,
.panel .panel-heading H5,
.panel .panel-heading H6 {
	margin: 0;
}

.panel .panel-body {
	background-color: white;
	margin: 0;
	padding: 1rem;
}
.panel .panel-body P:first-child {
	margin-top: 0;
}
.panel .panel-footer {
	border-top: 1px solid grey;
	color: dimgrey;
	font-size: 0.81rem;
	margin: 0;
	padding: 0.5rem;
}
.panel.drawn .panel-footer{
	border-top: 5px solid;
	border-image: url(box.png) 5 5 5 5 stretch;
}
.panel .panel-footer P {
	margin: 0;
}

.drawn, .panel.drawn {
	border: 5px solid;
	border-image: url('box.png') 5 5 5 5 stretch;
	-webkit-border-image: url('box.png') 5 5 5 5 stretch;
	-moz-border-image: url('box.png') 5 5 5 5 stretch;
	/*padding: 16px;*/
}
/* IE10 or less does not support border images. Here we can provide a fallback. */
.lte10 .drawn {
	border-width: 2px;
}


/* ------------------ ICONS ---------------------------------- */
SPAN.icon {
	background-image: url("wf-sprite.png");
	background-position: 40px 0;
	background-repeat: no-repeat;
	display: inline-block;
	height: 40px;
	margin: 0.5rem;
	width: 40px;
}
SPAN.icon.compact {
	background-size: 440px 20px;
	height: 20px;
	width: 20px;
}
SPAN.icon.add {background-position: 0 0;}
SPAN.icon.arrowdown { background-position: -40px 0;}
SPAN.icon.arrowright { background-position: -80px 0;}
SPAN.icon.arrow { background-position: -120px 0;}
SPAN.icon.attachment { background-position: -160px 0;}
SPAN.icon.closed { background-position: -200px 0;}
SPAN.icon.document { background-position: -240px 0;}
SPAN.icon.doubledown { background-position: -280px 0;}
SPAN.icon.doubleright { background-position: -320px 0;}
SPAN.icon.download { background-position: -360px 0;}
SPAN.icon.edit { background-position: -400px 0;}
SPAN.icon.ellipsis { background-position: -440px 0;}
SPAN.icon.error { background-position: -480px 0;}
SPAN.icon.info { background-position: -520px 0;}
SPAN.icon.minus { background-position: -560px 0;}
SPAN.icon.ok { background-position: -600px 0;}
SPAN.icon.open { background-position: -640px 0;}
SPAN.icon.options { background-position: -680px 0;}
SPAN.icon.plus { background-position: -720px 0;}
SPAN.icon.reload { background-position: -760px 0;}
SPAN.icon.upload { background-position: -800px 0;}
SPAN.icon.warning { background-position: -840px 0;}

SPAN.icon.arrowdown.compact { background-position: -20px 0}
SPAN.icon.arrowright.compact { background-position: -40px 0}
SPAN.icon.arrow.compact { background-position: -60px 0;}
SPAN.icon.attachment.compact { background-position: -80px 0;}
SPAN.icon.closed.compact { background-position: -100px 0;}
SPAN.icon.document.compact { background-position: -120px 0;}
/* ... */

